--- a/pomodoro.html
+++ b/pomodoro.html
@@ -77,7 +77,7 @@
             font-size: 1em;
         }
 
-        /* 积分系统和成就墙样式 */
+        /* 学习积分和成就墙样式 */
         .section {
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
@@ -142,16 +142,16 @@
                 <button onclick="saveLog()">保存记录</button>
             </div>
         </div>
-
         <!-- 学习积分 -->
         <div class="section">
             <h3>学习积分</h3>
             <p>数据截至：<span id="currentTime"></span></p>
             <p>当前已累计得分：<span id="points">0</span> 分</p>
             <div class="button">
-                <button id="redeemButton" onclick="redeem()">兑换</button>
+                <button id="redeemButton" onclick="redeem()">兑换情书</button>
             </div>
         </div>
+
         <!-- 成就墙 -->
         <div class="section">
             <h3>泉泉的成就墙</h3>
