--- a/pomodoro.html
+++ b/pomodoro.html
@@ -22,15 +22,23 @@
             margin: 20px auto;
         }
 
+        .row {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
         /* 番茄钟样式 */
         .pomodoro {
+            flex: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            margin-bottom: 20px;
         }
         .progress-circle {
             position: relative;
@@ -63,39 +71,32 @@
         button:hover {
             background-color: #a03a53;
         }
-        .log {
-            margin-top: 20px;
-        }
-        .log textarea {
-            width: 100%;
-            height: 60px;
-            margin-top: 10px;
-            border-radius: 5px;
-            background: rgba(230, 230, 230, 1);
-            padding: 10px;
-            border: none;
-            font-size: 1em;
+
+        /* 学习记录时间轴样式 */
+        .timeline {
+            flex: 1;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            height: 300px;
+            overflow-y: auto;
         }
 
         /* 学习积分和成就墙样式 */
         .section {
+            flex: 1;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            margin-bottom: 20px;
-            width: 100%;
-        }
-        .section h3 {
-            text-align: center;
-            margin-bottom: 20px;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         .button {
             display: flex;
             justify-content: center;
             margin-top: 10px;
-        }
-        .button button {
-            padding: 10px 20px;
         }
 
         /* 动态特效 */
@@ -137,28 +138,99 @@
                 <button onclick="pauseTimer()">暂停</button>
                 <button onclick="resetTimer()">重置</button>
             </div>
-            <div class="log">
-                <textarea id="logInput" placeholder="完成学习后写下学了什么..."></textarea>
-                <button onclick="saveLog()">保存记录</button>
-            </div>
         </div>
-        <!-- 学习积分 -->
-        <div class="section">
-            <h3>学习积分</h3>
-            <p>数据截至：<span id="currentTime"></span></p>
-            <p>当前已累计得分：<span id="points">0</span> 分</p>
-            <div class="button">
-                <button id="redeemButton" onclick="redeem()">兑换情书</button>
+         /* 学习记录时间轴样式 */
+        .timeline {
+            flex: 1;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            height: 300px;
+            overflow-y: auto;
+        }
+
+        /* 学习积分和成就墙样式 */
+        .section {
+            flex: 1;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .button {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        /* 动态特效 */
+        .sparkle {
+            position: fixed;
+            top: -50px;
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 223, 0, 0.8);
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(255, 223, 0, 0.8);
+            animation: fall 2s ease-in-out forwards;
+        }
+
+        @keyframes fall {
+            0% {
+                transform: translateY(0) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(800px) translateX(200px);
+                opacity: 0;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- 番茄钟 -->
+        <div class="pomodoro">
+            <h2>番茄钟</h2>
+            <div class="progress-circle" id="progress">
+                <span id="timer">25:00</span>
+            </div>
+            <div class="controls">
+                <input type="number" id="customTime" placeholder="分钟数" min="1" max="60">
+                <button onclick="setCustomTime()">设置时间</button>
+                <button onclick="startTimer()">开始</button>
+                <button onclick="pauseTimer()">暂停</button>
+                <button onclick="resetTimer()">重置</button>
             </div>
         </div>
 
-        <!-- 成就墙 -->
-        <div class="section">
-            <h3>泉泉的成就墙</h3>
-            <p>已累计学习：<span id="totalTime">0</span> 分钟</p>
-            <p>已累计完成番茄钟次数：<span id="totalPomodoros">0</span> 次</p>
-            <p>已完成学习目标：<span id="totalGoals">0</span> 个</p>
-            <p>已收获情书：<span id="letters">0</span> 封</p>
+        <!-- 学习记录时间轴 -->
+        <div class="timeline">
+            <h3>学习记录时间轴</h3>
+            <div id="timelineRecords"></div>
+        </div>
+
+        <!-- 学习积分和成就墙 -->
+        <div class="row">
+            <div class="section">
+                <h3>学习积分</h3>
+                <p>数据截至：<span id="currentTime"></span></p>
+                <p>当前已累计得分：<span id="points">0</span> 分</p>
+                <div class="button">
+                    <button id="redeemButton" onclick="redeem()">兑换情书</button>
+                </div>
+            </div>
+
+            <div class="section">
+                <h3>泉泉的成就墙</h3>
+                <p>已累计学习：<span id="totalTime">0</span> 分钟</p>
+                <p>已累计完成番茄钟次数：<span id="totalPomodoros">0</span> 次</p>
+                <p>已完成学习目标：<span id="totalGoals">0</span> 个</p>
+                <p>已收获情书：<span id="letters">0</span> 封</p>
+            </div>
         </div>
     </div>
 
@@ -219,7 +291,7 @@
                 letters++;
                 points -= 30;
                 const loveLetters = [
-                    "亲爱的泉泉：\n这是阿湛送妳的第一封情书，希望妳每天都能感受到我的爱～",
+                   "亲爱的泉泉：\n这是阿湛送妳的第一封情书，希望妳每天都能感受到我的爱～",
                     "泉泉：\n每完成一次番茄钟，妳就在梦想的路上更进一步，我永远陪着妳！",
                     // 更多情书内容……
                 ];
@@ -258,4 +330,4 @@
         window.onload = updateStats;
     </script>
 </body>
-</html>
+</html>  
