--- a/pomodoro.html
+++ b/pomodoro.html
@@ -30,7 +30,6 @@
             margin-top: 20px;
         }
 
-        /* 样式定义 */
         .pomodoro, .timeline, .section {
             flex: 1;
             background: rgba(255, 255, 255, 0.8);
@@ -149,7 +148,7 @@
                     <button id="redeemButton" onclick="redeem()">兑换情书</button>
                 </div>
             </div>
-            <!-- 成就墙 -->
+             <!-- 成就墙 -->
             <div class="section">
                 <h3>泉泉的成就墙</h3>
                 <p>已累计学习：<span id="totalTime">0</span> 分钟</p>
@@ -163,11 +162,11 @@
     <script>
         let interval;
         let time = 25 * 60;
-        let points = 0;
-        let totalPomodoros = 0;
-        let letters = 0;
-        let totalTime = 0;
-        let goalsCompleted = 0;
+        let points = parseInt(localStorage.getItem("points")) || 0;
+        let totalPomodoros = parseInt(localStorage.getItem("totalPomodoros")) || 0;
+        let letters = parseInt(localStorage.getItem("letters")) || 0;
+        let totalTime = parseInt(localStorage.getItem("totalTime")) || 0;
+        let goalsCompleted = parseInt(localStorage.getItem("totalGoals")) || 0;
         let timelineRecords = JSON.parse(localStorage.getItem("timelineRecords") || "[]");
 
         function updateTimerDisplay() {
@@ -196,6 +195,26 @@
             }, 1000);
         }
 
+        function pauseTimer() {
+            clearInterval(interval);
+        }
+
+        function resetTimer() {
+            clearInterval(interval);
+            time = 25 * 60;
+            updateTimerDisplay();
+        }
+
+        function setCustomTime() {
+            const customTime = parseInt(document.getElementById("customTime").value);
+            if (customTime && customTime > 0) {
+                time = customTime * 60;
+                updateTimerDisplay();
+            } else {
+                alert("请输入有效的分钟数！");
+            }
+        }
+
         function saveTimelineRecord(goal, review, minutes) {
             const record = { time: new Date().toLocaleString(), goal, review, minutes };
             timelineRecords.push(record);
@@ -215,21 +234,45 @@
                 letters++;
                 points -= 30;
                 const loveLetters = [
-                    "这是阿湛为泉泉的第1封小情书~",
+               "这是阿湛为泉泉的第1封小情书~",
                     "每完成一次，你离梦想更近~",
-                    // 更多可以自己填充内容
+                    "深情等待泉泉完成！",
                 ];
-                const content = loveLetters[letters - 1] || "深情等待泉泉完成！";
+                const content = loveLetters[letters - 1] || "未来更多情书等你解锁！";
                 alert(content);
+                updateStats();
+            } else {
+                alert("积分不足，快去完成番茄钟吧！");
             }
         }
 
         function updateStats() {
             document.getElementById("totalTime").innerText = totalTime;
+            document.getElementById("totalPomodoros").innerText = totalPomodoros;
+            document.getElementById("letters").innerText = letters;
             document.getElementById("points").innerText = points;
+            document.getElementById("currentTime").innerText = new Date().toLocaleString();
+
+            localStorage.setItem("totalTime", totalTime);
+            localStorage.setItem("totalPomodoros", totalPomodoros);
+            localStorage.setItem("letters", letters);
+            localStorage.setItem("points", points);
+            localStorage.setItem("totalGoals", goalsCompleted);
         }
 
-        window.onload = renderTimeline;
+        function addSparkle() {
+            const sparkle = document.createElement("div");
+            sparkle.className = "sparkle";
+            sparkle.style.left = `${Math.random() * window.innerWidth}px`;
+            document.body.appendChild(sparkle);
+            setTimeout(() => sparkle.remove(), 2000);
+        }
+
+        window.onload = () => {
+            updateStats();
+            renderTimeline();
+            updateTimerDisplay();
+        };
     </script>
 </body>
-</html>
+</html>      
