--- a/pomodoro.html
+++ b/pomodoro.html
@@ -184,9 +184,9 @@
 
     <!-- 跳转索引 -->
     <div class="index">
-        <a href="#timeline.html">时间线</a>
-        <a href="#profile.html">个人主页</a>
-        <a href="#notebook.html">记事本</a>
+        <a href="timeline.html">时间线</a>
+        <a href="profile.html">个人主页</a>
+        <a href="notebook.html">记事本</a>
     </div>
 
     <script>
