--- a/profile.html
+++ b/profile.html
@@ -85,9 +85,11 @@
         }
 
         .comment-section button {
-            margin-left: 10px;
+            margin-left: 15px;
         }
-
+        .dynamic button:first-of-type {
+        margin-right: 10px; 
+    }
         .music-player {
             margin-top: 20px;
             text-align: center;
